updating application configuration properties